--- a/app/src/main/res/layout/activity_main_menu2.xml
+++ b/app/src/main/res/layout/activity_main_menu2.xml
@@ -1,27 +1,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_layers"
     android:padding="16dp">
 
 
-    <!-- Title TextView -->
-    <TextView
-        android:id="@+id/tv_menu_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Main Menu"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-
-        />
 
     <!-- BMI Calculator Button -->
     <Button
@@ -29,17 +15,18 @@
         android:layout_width="338dp"
         android:layout_height="wrap_content"
         android:text="BMI Calculator"
-        app:layout_constraintTop_toBottomOf="@id/tv_menu_title"
+        app:layout_constraintTop_toBottomOf="@id/logo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-
+        android:textSize="20sp"
         android:background="@drawable/buttons"
         />
 
     <!-- Disease Prediction Button -->
     <Button
         android:id="@+id/btn_disease_prediction"
+        android:textSize="20sp"
         android:layout_width="338dp"
         android:layout_height="wrap_content"
         android:text="Disease Prediction"
@@ -55,7 +42,7 @@
 
         android:id="@+id/btn_life_expectancy"
         android:layout_width="338dp"
-
+        android:textSize="20sp"
         android:layout_height="wrap_content"
         android:text="Life Expectancy Calculator"
         android:background="@drawable/buttons"
@@ -70,6 +57,7 @@
         android:id="@+id/btn_mental_disorder_prediction"
         android:layout_width="338dp"
         android:layout_height="wrap_content"
+        android:textSize="20sp"
         android:text="Mental Disorder Prediction"
         android:background="@drawable/buttons"
         app:layout_constraintTop_toBottomOf="@id/btn_life_expectancy"
@@ -85,9 +73,21 @@
         android:layout_height="wrap_content"
         android:background="@drawable/buttons"
         android:text="Log Out"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_mental_disorder_prediction" />
+
+    <ImageView
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+
+        android:id="@+id/logo"
+        android:layout_width="376dp"
+        android:layout_height="350dp"
+        app:srcCompat="@drawable/icon_lifeai"
+        tools:layout_editor_absoluteX="-1dp"
+        tools:layout_editor_absoluteY="29dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
