--- a/app/src/main/res/drawable/buttons.xml
+++ b/app/src/main/res/drawable/buttons.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="12dp" />
             <gradient
-                android:startColor="#77FFED"
+                android:startColor="#FFC6E9"
                 android:endColor="#FFB88C"
                 android:angle="45" />
             <stroke android:width="2dp" android:color="#FFFFFF" />
@@ -26,10 +26,10 @@
         <shape android:shape="rectangle">
             <corners android:radius="12dp" />
             <gradient
-                android:startColor="@color/Light_blue"
-                android:endColor="@color/Light_blue"
+                android:startColor="#FFC2C2"
+                android:endColor="#FFC3C3"
                 android:angle="45" />
-            <stroke android:width="2dp" android:color="#4332C1" />
+            <stroke android:width="2dp" android:color="#C53E3E" />
             <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" />
         </shape>
     </item>
