--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity3"
     android:background="#FEF8F8">
 
@@ -239,7 +240,7 @@
 
     </LinearLayout>
 
-    <!-- Bottom Navigation View -->
+    <!-- Bottom Navigation -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
@@ -248,5 +249,4 @@
         android:background="#FFFFFF"
         app:menu="@menu/bottom_nav_menu"
         android:elevation="4dp" />
-
 </FrameLayout>
