Perbaikan UI dan Masukkan string

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:layout_marginStart="20dp"
-        android:text="LifeAI"
+        android:text="@string/app_name"
         android:textSize="40sp"
         android:textStyle="bold"
         android:textColor="@color/black"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginStart="20dp"
-        android:text="Belum Punya Akun? Daftar"
+        android:text="@string/belum_punya_akun_daftar"
         android:textColor="@android:color/holo_blue_light"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/tvHeader"
@@ -53,7 +53,7 @@
         android:id="@+id/etEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Masukkan Email Anda"
+        android:hint="@string/masukkan_email_anda"
         android:inputType="textEmailAddress"
         android:padding="12dp"
         android:textColor="@color/black"
@@ -70,7 +70,7 @@
         android:id="@+id/etPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Masukkan Password Anda"
+        android:hint="@string/masukkan_password_anda"
         android:inputType="textPassword"
         android:padding="12dp"
         android:textColor="@color/black"
@@ -92,7 +92,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/rounded_button"
-        android:text="Login"
+        android:text="@string/login"
         android:textSize="20sp"
         android:textColor="@color/white"
         android:gravity="center"
