--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:layout_marginStart="20dp"
-        android:text="Daftar"
+        android:text="@string/daftar"
         android:textColor="@color/black"
         android:textSize="35sp"
         android:textStyle="bold"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginStart="20dp"
-        android:text="Sudah Punya Akun? Masuk"
+        android:text="@string/sudah_punya_akun_masuk"
         android:textColor="@android:color/holo_blue_light"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/tvHeader"
@@ -50,7 +50,7 @@
         android:id="@+id/etUsername"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Masukkan Username Anda"
+        android:hint="@string/masukkan_username_anda"
         android:inputType="textPersonName"
         android:padding="16dp"
         android:background="@drawable/edittext_border"
@@ -67,7 +67,7 @@
         android:id="@+id/etEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Masukkan Email Anda"
+        android:hint="@string/masukkan_email_anda"
         android:inputType="textEmailAddress"
         android:padding="16dp"
         android:textColor="@color/black"
@@ -84,7 +84,7 @@
         android:id="@+id/etPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Masukkan Password Anda"
+        android:hint="@string/masukkan_password_anda"
         android:inputType="textPassword"
         android:padding="16dp"
         android:background="@drawable/edittext_border"
@@ -105,7 +105,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/rounded_button"
-        android:text="Sign Up"
+        android:text="@string/daftar"
         android:textSize="20sp"
         android:textColor="@color/white"
         android:gravity="center"
