--- a/app/src/main/res/layout/activity_bmi.xml
+++ b/app/src/main/res/layout/activity_bmi.xml
@@ -6,14 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    >
+    android:background="#F5F5F5">
 
-    <!-- Title -->
+    <!-- Judul -->
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Calculator BMI"
+        android:text="Kalkulator BMI"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@color/black"
@@ -25,140 +25,156 @@
         app:layout_constraintVertical_chainStyle="packed"
         tools:ignore="HardcodedText" />
 
-    <!-- Form Container -->
+    <!-- Formulir -->
+
+    <!-- Tombol Hitung -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/formContainer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/title">
 
-        <!-- Age -->
+        <!-- Usia -->
         <TextView
             android:id="@+id/ageLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Age"
+            android:text="@string/usia"
             android:textColor="@color/black"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <!-- Jenis Kelamin -->
         <EditText
             android:id="@+id/ageEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Enter your age"
+            android:background="@drawable/rounded_edittext"
+            android:hint="Masukkan usia Anda"
             android:inputType="number"
-            android:background="@drawable/bg_edittext"
-            app:layout_constraintTop_toTopOf="@id/ageLabel"
-            app:layout_constraintStart_toEndOf="@id/ageLabel"
+            android:padding="12dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@id/ageLabel"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_percent="0.7"
             tools:ignore="HardcodedText" />
 
-        <!-- Gender -->
         <TextView
             android:id="@+id/genderLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Gender"
+            android:text="@string/jenis_kelamin"
             android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/ageEditText"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ageEditText" />
 
         <RadioGroup
             android:id="@+id/genderRadioGroup"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/ageEditText"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/genderLabel"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/ageEditText">
 
             <RadioButton
                 android:id="@+id/maleRadioButton"
+                style="@style/RadioButtonTextStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Male" />
+                android:text="@string/laki_laki" />
 
             <RadioButton
                 android:id="@+id/femaleRadioButton"
+                style="@style/RadioButtonTextStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Female" />
+                android:text="@string/perempuan" />
         </RadioGroup>
 
-        <!-- Height -->
+        <!-- Tinggi Badan -->
         <TextView
             android:id="@+id/heightLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Height (cm)"
+            android:layout_marginTop="30dp"
+            android:text="@string/tinggi_badan_cm"
+            android:textSize="14sp"
             android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/genderRadioGroup"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/genderRadioGroup" />
 
         <EditText
             android:id="@+id/heightEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Enter height in cm"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/rounded_edittext"
+            android:hint="@string/masukkan_tinggi_badan_dalam_cm"
             android:inputType="numberDecimal"
-            android:background="@drawable/bg_edittext"
-            app:layout_constraintTop_toBottomOf="@id/genderRadioGroup"
-            app:layout_constraintStart_toEndOf="@id/heightLabel"
+            android:padding="12dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/heightLabel"
+            app:layout_constraintTop_toBottomOf="@id/genderRadioGroup"
             app:layout_constraintWidth_percent="0.7" />
 
-        <!-- Weight -->
+        <!-- Berat Badan -->
         <TextView
             android:id="@+id/weightLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Weight (kg)"
+            android:layout_marginTop="30dp"
+            android:text="@string/berat_badan_kg"
             android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/heightEditText"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/heightEditText" />
 
         <EditText
             android:id="@+id/weightEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Enter weight in kg"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/rounded_edittext"
+            android:hint="@string/masukkan_berat_badan_dalam_kg"
             android:inputType="numberDecimal"
-            android:background="@drawable/bg_edittext"
-            app:layout_constraintTop_toBottomOf="@id/heightEditText"
-            app:layout_constraintStart_toEndOf="@id/weightLabel"
+            android:padding="12dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@id/weightLabel"
+            app:layout_constraintTop_toBottomOf="@id/heightEditText"
             app:layout_constraintWidth_percent="0.7" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- Calculate Button -->
     <Button
         android:id="@+id/calculateButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Calculate"
-        android:backgroundTint="@color/purple_500"
+        android:text="@string/hitung"
+        android:background="@drawable/rounded_button"
         android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/formContainer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- BMI Result -->
+    <!-- Hasil BMI -->
     <TextView
         android:id="@+id/bmiResultLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="BMI Result:"
+        android:text="@string/hasil_bmi"
         android:textSize="16sp"
         android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/calculateButton"
@@ -167,22 +183,22 @@
     <TextView
         android:id="@+id/bmiResultTextView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/bg_result"
+        android:background="@drawable/rounded_edittext"
         android:gravity="center"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/bmiResultLabel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- BMI Class -->
+    <!-- Klasifikasi BMI -->
     <TextView
         android:id="@+id/classResultLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="BMI Class:"
+        android:text="@string/klasifikasi_bmi"
         android:textSize="16sp"
         android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/bmiResultTextView"
@@ -191,9 +207,9 @@
     <TextView
         android:id="@+id/classResultTextView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/bg_result"
+        android:background="@drawable/rounded_edittext"
         android:gravity="center"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/classResultLabel"
