--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -18,7 +18,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Prediksi Penyakit Mental"
+            android:text="@string/prediksi_penyakit_mental"
             android:textColor="#000"
             android:textSize="24sp"
             android:gravity="center"
@@ -52,7 +52,7 @@
                     android:id="@+id/inputText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Masukkan pesan Anda"
+                    android:hint="@string/masukkan_pesan_anda"
                     android:padding="12dp"
                     android:layout_marginBottom="10dp"
                     android:background="@android:drawable/editbox_background" />
@@ -61,8 +61,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Seberapa intens perasaan negatif yang Anda rasakan?"
-                    android:layout_marginTop="16dp" />
+                    android:text="@string/seberapa_intens_perasaan_negatif_yang_anda_rasakan"
+                    style="@style/SeekBarTextStyle"/>
 
                 <SeekBar
                     android:id="@+id/intensitasSeekBar"
@@ -76,8 +76,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Seberapa lama perasaan ini berlangsung?"
-                    android:layout_marginTop="10dp" />
+                    android:text="@string/seberapa_lama_perasaan_ini_berlangsung"
+                    style="@style/SeekBarTextStyle" />
                 <SeekBar
                     android:id="@+id/durasiSeekBar"
                     android:layout_width="match_parent"
@@ -89,8 +89,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Seberapa sering Anda merasakan perasaan negatif?"
-                    android:layout_marginTop="10dp" />
+                    android:text="@string/seberapa_sering_anda_merasakan_perasaan_negatif"
+                    style="@style/SeekBarTextStyle" />
                 <SeekBar
                     android:id="@+id/frekuensiSeekBar"
                     android:layout_width="match_parent"
@@ -102,8 +102,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Seberapa besar perasaan ini mengganggu aktivitas harian Anda?"
-                    android:layout_marginTop="10dp" />
+                    android:text="@string/seberapa_besar_perasaan_ini_mengganggu_aktivitas_harian_anda"
+                    style="@style/SeekBarTextStyle"/>
+
                 <SeekBar
                     android:id="@+id/keseharianSeekBar"
                     android:layout_width="match_parent"
@@ -116,8 +117,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Seberapa sering Anda memiliki pola berpikir negatif tentang diri sendiri?"
-                    android:layout_marginTop="10dp" />
+                    android:text="@string/seberapa_sering_anda_memiliki_pola_berpikir_negatif_tentang_diri_sendiri"
+                    style="@style/SeekBarTextStyle"/>
                 <SeekBar
                     android:id="@+id/polaNegatifSeekBar"
                     android:layout_width="match_parent"
@@ -129,21 +130,23 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Seberapa sering Anda merasa takut pada situasi tanpa alasan jelas?"
-                    android:layout_marginTop="10dp" />
+                    android:text="@string/seberapa_sering_anda_merasa_takut_pada_situasi_tanpa_alasan_jelas"
+                    style="@style/SeekBarTextStyle"/>
                 <SeekBar
                     android:id="@+id/ketakutanSeekBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:max="4"
-                    style="@style/CustomSeekBar"/>
+                    style="@style/CustomSeekBar"
+                    android:textSize="16sp"
+                    android:textColor="#333333"/>
 
                 <!-- Kesulitan Berkonsentrasi -->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Seberapa sering Anda kesulitan berkonsentrasi atau fokus?"
-                    android:layout_marginTop="10dp" />
+                    android:text="@string/seberapa_sering_anda_kesulitan_berkonsentrasi_atau_fokus"
+                    style="@style/SeekBarTextStyle" />
                 <SeekBar
                     android:id="@+id/konsentrasiSeekBar"
                     android:layout_width="match_parent"
@@ -155,8 +158,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Seberapa sering Anda merasa kelelahan berlebih?"
-                    android:layout_marginTop="10dp" />
+                    android:text="@string/seberapa_sering_anda_merasa_kelelahan_berlebih"
+                    style="@style/SeekBarTextStyle"/>
                 <SeekBar
                     android:id="@+id/kelelahanSeekBar"
                     android:layout_width="match_parent"
@@ -168,8 +171,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Seberapa sering Anda mengalami gangguan tidur?"
-                    android:layout_marginTop="10dp" />
+                    android:text="@string/seberapa_sering_anda_mengalami_gangguan_tidur"
+                    style="@style/SeekBarTextStyle" />
                 <SeekBar
                     android:id="@+id/tidurSeekBar"
                     android:layout_width="match_parent"
@@ -181,8 +184,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Seberapa besar penurunan minat Anda pada aktivitas yang biasanya disukai?"
-                    android:layout_marginTop="10dp" />
+                    android:text="@string/seberapa_besar_penurunan_minat_anda_pada_aktivitas_yang_biasanya_disukai"
+                    style="@style/SeekBarTextStyle"/>
                 <SeekBar
                     android:id="@+id/minatSeekBar"
                     android:layout_width="match_parent"
@@ -194,8 +197,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Seberapa sering Anda menghindari interaksi sosial?"
-                    android:layout_marginTop="10dp" />
+                    android:text="@string/seberapa_sering_anda_menghindari_interaksi_sosial"
+                    style="@style/SeekBarTextStyle"/>
                 <SeekBar
                     android:id="@+id/isolasiSeekBar"
                     android:layout_width="match_parent"
@@ -209,7 +212,7 @@
                     android:id="@+id/sendButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Kirim"
+                    android:text="@string/kirim"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/rounded_button"
                     android:textColor="#fff"
@@ -232,7 +235,7 @@
                     android:id="@+id/outputText2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Algorithm Output"
+                    android:text="@string/hasil_algoritma"
                     android:layout_marginTop="16dp"
                     android:textSize="16sp"/>
             </LinearLayout>
