--- a/app/src/main/res/layout/activity_bmi.xml
+++ b/app/src/main/res/layout/activity_bmi.xml
@@ -26,8 +26,6 @@
         tools:ignore="HardcodedText" />
 
     <!-- Formulir -->
-
-    <!-- Tombol Hitung -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/formContainer"
         android:layout_width="0dp"
@@ -49,7 +47,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Jenis Kelamin -->
         <EditText
             android:id="@+id/ageEditText"
             android:layout_width="0dp"
@@ -65,6 +62,7 @@
             app:layout_constraintWidth_percent="0.7"
             tools:ignore="HardcodedText" />
 
+        <!-- Jenis Kelamin -->
         <TextView
             android:id="@+id/genderLabel"
             android:layout_width="wrap_content"
@@ -153,9 +151,9 @@
             app:layout_constraintStart_toEndOf="@id/weightLabel"
             app:layout_constraintTop_toBottomOf="@id/heightEditText"
             app:layout_constraintWidth_percent="0.7" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <!-- Tombol Hitung -->
     <Button
         android:id="@+id/calculateButton"
         android:layout_width="0dp"
@@ -215,5 +213,19 @@
         app:layout_constraintTop_toBottomOf="@id/classResultLabel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Bottom Navigation View -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:outlineSpotShadowColor="@color/Light_red"
+        app:itemIconTint="#FF5E5E"
+        app:itemTextColor="#FFA4A4"
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_gravity="bottom"
+        android:background="#FFFFFF"
+        android:elevation="4dp"
+        app:menu="@menu/bottom_nav_menu"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
