--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -199,6 +199,9 @@
 
     <!-- Bottom Navigation -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:outlineSpotShadowColor="@color/Light_red"
+        app:itemIconTint="#FF5E5E"
+        app:itemTextColor="#FFA4A4"
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="56dp"
